--- a/samples/apps/copilot-chat-app/webapp/package.json
+++ b/samples/apps/copilot-chat-app/webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copilot-chat",
+  "name": "copilot-chat-guest",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,9 +16,6 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@azure/ms-rest-js": "^2.6.4",
-    "@azure/msal-browser": "^2.32.1",
-    "@azure/msal-react": "^1.5.1",
     "@fluentui/react-components": "^9.13.0",
     "@fluentui/react-icons": "^2.0.193",
     "@fluentui/react-northstar": "^0.66.4",
