Remove Az speech and Bot export/import

--- a/samples/apps/copilot-chat-app/webapp/tsconfig.json
+++ b/samples/apps/copilot-chat-app/webapp/tsconfig.json
@@ -29,7 +29,7 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
-        "types": [],
+        "types": ["node"],
         "composite": true
     },
     "include": ["src", "src/assets/custom.d.ts"]
