--- a/samples/apps/copilot-chat-app/webapi/CopilotChatApi.csproj
+++ b/samples/apps/copilot-chat-app/webapi/CopilotChatApi.csproj
@@ -19,7 +19,6 @@
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.16" />
-    <PackageReference Include="Microsoft.CognitiveServices.Speech" Version="1.28.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.33.0" />
     <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="7.0.0" />
     <PackageReference Include="Microsoft.Identity.Web" Version="2.9.0" />
@@ -41,6 +40,8 @@
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Skills\OpenApiSkills\GitHubSkill\openapi.json" />
+    <_ContentIncludedByDefault Remove="DeploymentTemplates\sk-existing-ai.json" />
+    <_ContentIncludedByDefault Remove="DeploymentTemplates\sk.json" />
   </ItemGroup>
 
 </Project>
