--- a/samples/apps/copilot-chat-app/webapi/appsettings.json
+++ b/samples/apps/copilot-chat-app/webapi/appsettings.json
@@ -38,8 +38,8 @@
     "Label": "Completion",
     "AIService": "AzureOpenAI",
     "DeploymentOrModelId": "gpt-35-turbo",
-    "Endpoint": "https://lightspeed-team-shared-openai.openai.azure.com/", // ignored when AIService is "OpenAI"
-    "Key": "9e2fe86fbbfd4438bdc9bf81e8a1a9c3"
+    "Endpoint": "" // ignored when AIService is "OpenAI"
+    // "Key": ""
   },
 
   //
@@ -61,8 +61,8 @@
     "Label": "Embeddings",
     "AIService": "AzureOpenAI",
     "DeploymentOrModelId": "text-embedding-ada-002",
-    "Endpoint": "https://lightspeed-team-shared-openai.openai.azure.com/", // ignored when AIService is "OpenAI"
-    "Key": "9e2fe86fbbfd4438bdc9bf81e8a1a9c3"
+    "Endpoint": "" // ignored when AIService is "OpenAI"
+    // "Key": ""
   },
 
   //
