--- a/samples/apps/copilot-chat-app/webapi/appsettings.json
+++ b/samples/apps/copilot-chat-app/webapi/appsettings.json
@@ -1,12 +1,12 @@
 //
 // # CopilotChat Application Settings
-// 
+//
 // # Quickstart
 //  - Update the "Completion" and "Embedding" sections below to use your AI services.
-// 
+//
 // # Secrets
 // Consider populating secrets, such as "Key" and "ConnectionString" properties, from dotnet's user-secrets when running locally.
-// https://learn.microsoft.com/en-us/aspnet/core/security/app-secrets?view=aspnetcore-7.0&tabs=windows#secret-manager       
+// https://learn.microsoft.com/en-us/aspnet/core/security/app-secrets?view=aspnetcore-7.0&tabs=windows#secret-manager
 // Values in user secrets and (optionally) Key Vault take precedence over those in this file.
 //
 {
@@ -28,7 +28,7 @@
   //  - Set "DeploymentOrModelId" to the name of the deployment to use (e.g., "gpt-35-turbo", "gpt-4", etc.)
   //  - Set "Endpoint" to the endpoint of your Azure OpenAI instance (e.g., "https://contoso.openai.azure.com")
   //  - Set "Key" using dotnet's user secrets (see above) (i.e. dotnet user-secrets set "Completion:Key" "MY_AZURE_OPENAI_KEY")
-  // 
+  //
   // To use OpenAI as the AI completion service:
   //  - Set "AIService" to "OpenAI"
   //  - Set "DeploymentOrModelId" to the name of the deployment to use (e.g., "gpt-3.5-turbo", "gpt-4", etc.)
@@ -51,7 +51,7 @@
   //  - Set "DeploymentOrModelId" to the name of the deployment to use (e.g., "text-embedding-ada-002")
   //  - Set "Endpoint" to the endpoint of your Azure OpenAI instance (e.g., "https://contoso.openai.azure.com")
   //  - Set "Key" using dotnet's user secrets (see above) (i.e. dotnet user-secrets set "Embedding:Key" "MY_AZURE_OPENAI_KEY")
-  // 
+  //
   // To use OpenAI as the AI embedding service:
   //  - Set "AIService" to "OpenAI"
   //  - Set "DeploymentOrModelId" to the name of the deployment to use (e.g., "text-embedding-ada-002" )
@@ -86,7 +86,7 @@
   // Memories stores are used for storing new memories and retrieving semantically similar memories.
   // - Supported Types are "volatile", "qdrant", or "azurecognitivesearch".
   // - When using Qdrant or Azure Cognitive Search, see ./README.md for deployment instructions.
-  // - The "Semantic Search" feature must be enabled on Azure Cognitive Search. 
+  // - The "Semantic Search" feature must be enabled on Azure Cognitive Search.
   // - The Embedding configuration above will not be used when Azure Cognitive Search is selected.
   //
   "MemoriesStore": {
@@ -109,18 +109,16 @@
   // - Default token limits are suggested by OpenAI:
   // https://help.openai.com/en/articles/4936856-what-are-tokens-and-how-to-count-them
   // - Prevent large uploads by setting a file size limit (in bytes) as suggested here:
+  // https://help.openai.com/en/articles/4936856-what-are-tokens-and-how-to-count-them
+  // - Prevent large uploads by setting a file size limit (in bytes) as suggested here:
   // https://learn.microsoft.com/en-us/aspnet/core/mvc/models/file-uploads?view=aspnetcore-6.0
-  // - Deduplication similarity threshold is used to determine if a document is similar to
-  //   another document that is already in memory:
-  //   - The higher the value, the more document memories can be similar without being eliminated as duplicates.
   //
   "DocumentMemory": {
     "GlobalDocumentCollectionName": "global-documents",
     "UserDocumentCollectionNamePrefix": "user-documents-",
     "DocumentLineSplitMaxTokens": 30,
     "DocumentParagraphSplitMaxLines": 100,
-    "FileSizeLimit": 1000000,
-    "DeduplicationSimilarityThreshold": 0.8
+    "FileSizeLimit": 10000000
   },
 
   //
