--- a/samples/apps/copilot-chat-app-basic/webapi/appsettings.json
+++ b/samples/apps/copilot-chat-app-basic/webapi/appsettings.json
@@ -26,9 +26,9 @@
   //
   "Completion": {
     "Label": "Completion",
-    "AIService": "AzureOpenAI",
-    "DeploymentOrModelId": "gpt-35-turbo",
-    "Endpoint": "" // ignored when AIService is "OpenAI"
+    "AIService": "OpenAI",
+    "DeploymentOrModelId": "gpt-35-turbo"
+    //"Endpoint": "" // ignored when AIService is "OpenAI"
     // "Key": ""
   },
 
@@ -49,9 +49,9 @@
   //
   "Embedding": {
     "Label": "Embeddings",
-    "AIService": "AzureOpenAI",
-    "DeploymentOrModelId": "text-embedding-ada-002",
-    "Endpoint": "" // ignored when AIService is "OpenAI"
+    "AIService": "OpenAI",
+    "DeploymentOrModelId": "text-embedding-ada-002"
+    // "Endpoint": "" // ignored when AIService is "OpenAI"
     // "Key": ""
   },
 
