--- a/samples/apps/copilot-chat-app-basic/webapi/appsettings.json
+++ b/samples/apps/copilot-chat-app-basic/webapi/appsettings.json
@@ -27,9 +27,9 @@
   "Completion": {
     "Label": "Completion",
     "AIService": "OpenAI",
-    "DeploymentOrModelId": "gpt-35-turbo"
-    //"Endpoint": "" // ignored when AIService is "OpenAI"
-    // "Key": ""
+    "DeploymentOrModelId": "gpt-35-turbo",
+    "Endpoint": "", // ignored when AIService is "OpenAI"
+    "Key": ""
   },
 
   //
@@ -50,9 +50,9 @@
   "Embedding": {
     "Label": "Embeddings",
     "AIService": "OpenAI",
-    "DeploymentOrModelId": "text-embedding-ada-002"
-    // "Endpoint": "" // ignored when AIService is "OpenAI"
-    // "Key": ""
+    "DeploymentOrModelId": "text-embedding-ada-002",
+    "Endpoint": "", // ignored when AIService is "OpenAI"
+    "Key": ""
   },
 
   //
