--- a/samples/apps/copilot-chat-app/webapp/package.json
+++ b/samples/apps/copilot-chat-app/webapp/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint src",
     "prettify": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,scss,css,html,svg}\"",
     "serve": "http-server dist -p 4000 -S -C certs/cert.pem -K certs/key.pem",
-    "start": "react-scripts start",
+    "start": "node ./node_modules/.bin/ts-node ./src/index.tsx",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -51,6 +51,7 @@
     "eslint-plugin-react-security": "^0.1.0",
     "http-server": "^14.1.1",
     "prettier": "^2.8.1",
+    "ts-node": "^10.9.1",
     "typescript": "*",
     "vsts-npm-auth": "^0.42.1",
     "workbox-window": "^6.5.4"
