--- a/samples/apps/copilot-chat-app/webapp/package.json
+++ b/samples/apps/copilot-chat-app/webapp/package.json
@@ -11,7 +11,7 @@
     "prettify": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,scss,css,html,svg}\"",
     "serve": "http-server dist -p 4000 -S -C certs/cert.pem -K certs/key.pem",
     "start": "node ./node_modules/.bin/ts-node ./src/index.tsx",
-    "build": "react-scripts build",
+    "build": "tsc",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
